@@ -1,3 +1,8 @@
+bloonix-server (0.12) released at 2014-12-23
+
+    * Fixed status switches from warning to critical if attempt max
+      is reached.
+
 bloonix-server (0.11) released at 2014-12-14
 
     * Improved the script to count elasticsearch documents for each
